# test-asset-generator

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-15-test-asset-generator.md
docs/superpowers/specs/: 2026-04-15-test-asset-generator-design.md
ffmpeg/mac/: ffmpeg
scripts/: .inject-dmg-readme.sh  fetch-ffmpeg-macos.sh  fetch-ffmpeg-windows.sh  post_build_dmg.sh
src/: App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.bundle.json  tauri.windows.bundle.json
src-tauri/.icons/: icon.icns
src-tauri/capabilities/: default.json
src-tauri/resources/: README.txt
src-tauri/scripts/: fetch-soundfont.sh
src-tauri/src/: audio_lavfi.rs  audio_music.rs  config.rs  ffmpeg.rs  fluidsynth_render.rs  generator.rs  main.rs  melody.rs  music_library.rs  process_ext.rs  soundfont_manager.rs
src/components/: AudioTab.tsx  Header.tsx  ImageTab.tsx  MusicTab.tsx  ProgressPanel.tsx  ResultSummary.tsx  TabBar.tsx  VideoTab.tsx
src/hooks/: useGenerator.ts
src/types/: index.ts
