[package]
name = "muse-generator"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.0"
md5 = "0.7"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
